test/parsing/ferguson/reserved-imag.chpl
var imag = 0;

proc f(imag) {
}

class imag {
  var imag =0;
}

type imag = string;

proc imag() {
}

proc test() {
  try {
  } catch imag {
  }
}
